--- a/doc/file.man
+++ b/doc/file.man
@@ -1,12 +1,12 @@
 .TH FILE __CSECTION__ "Copyright but distributable"
-.\" $Id: file.man,v 1.49 2003/05/23 21:31:57 christos Exp $
+.\" $Id: file.man,v 1.50 2003/07/10 17:51:09 christos Exp $
 .SH NAME
 file
 \- determine file type
 .SH SYNOPSIS
 .B file
 [
-.B \-bcikLnNsvz
+.B \-bcikLnNpsvz
 ]
 [
 .B \-f
@@ -212,6 +212,15 @@ It is intended to be used by programs that want filetype output from a pipe.
 .TP 8
 .B "\-N, \-\-no\-pad"
 Don't pad filenames so that they align in the output.
+.TP 8
+.B "\-p, \-\-preserve\-date"
+On systems that support
+.BR utime (2)
+or,
+.BR utimes(2)
+attempt to preserve the access time of files analyzed, to pretend that
+.BR file (2)
+never read them.
 .TP 8
 .B "\-s, \-\-special\-files"
 Normally,
