--- a/doc/file.man
+++ b/doc/file.man
@@ -1,12 +1,12 @@
 .TH FILE __CSECTION__ "Copyright but distributable"
-.\" $Id: file.man,v 1.51 2003/10/08 16:10:15 christos Exp $
+.\" $Id: file.man,v 1.52 2003/10/09 15:18:12 christos Exp $
 .SH NAME
 file
 \- determine file type
 .SH SYNOPSIS
 .B file
 [
-.B \-bcikLnNpsvz
+.B \-bcikLnNprsvz
 ]
 [
 .B \-f
@@ -222,6 +222,12 @@ or,
 attempt to preserve the access time of files analyzed, to pretend that
 .BR file (2)
 never read them.
+.TP 8
+.B "\-r, \-\-raw"
+Don't translate unprintable characters to \eooo.
+Normally
+.B file
+translates unprintable characters to their octal representation.
 .TP 8
 .B "\-s, \-\-special\-files"
 Normally,
