--- a/doc/file.man
+++ b/doc/file.man
@@ -1,5 +1,5 @@
 .TH FILE __CSECTION__ "Copyright but distributable"
-.\" $Id: file.man,v 1.52 2003/10/09 15:18:12 christos Exp $
+.\" $Id: file.man,v 1.53 2003/10/16 13:02:56 christos Exp $
 .SH NAME
 file
 \- determine file type
@@ -217,8 +217,8 @@ Don't pad filenames so that they align in the output.
 .B "\-p, \-\-preserve\-date"
 On systems that support
 .BR utime (2)
-or,
-.BR utimes(2)
+or
+.BR utimes(2) ,
 attempt to preserve the access time of files analyzed, to pretend that
 .BR file (2)
 never read them.
